# ultra-doc-intelligence-

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/: main.py  vercel.json
backend/routes/: ask.py  extract.py  upload.py
backend/services/: extraction.py  guardrails.py  ingestion.py  rag.py
frontend/: streamlit_app.py
